izveidojām html laukus JS

--- a/indekss.html
+++ b/indekss.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Cik ātrs tu esi?</h1>
     <p>Uzklikšķini uz pirmās bildes, pēctam uz otras, tā tu uzzināsi kāds ir tavs reakcijas laiks.</p>
+    <p>Tavs laiks:<span id="tavslaiks">te būs redzams tavs laiks</span></p>
+    <div id="attēls" style="position: absolute"></div>
 </body>
 </html>
